# Glxy

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  SConstruct  _config.yml
.github/workflows/: build_on_push.yml
Source/: Angle.h  CMakeLists.txt  CSV.h  Earth.h  Glxy.h  KeplerianElements.cpp  KeplerianElements.h  Object.h  Options.h  Planet.h  PolarPlot.h  SolarSystem.h  Star.h  StarDB.h  Time.h  Vector.h  ViewPlanets.h  ViewPlanisphere.h  glxy.cpp
